ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/Contractor_Invoice__c.object-meta.xml
<CustomObject>
    <label>Uploaded Invoice</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uploaded Invoices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>