ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/ACTUAL_FILE_IDS__c.field-meta.xml
<CustomField>
    <fullName>ACTUAL_FILE_IDS__c</fullName>
    <description>TEMP</description>
    <label>ACTUAL FILE IDS</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>