ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Check_Cheque_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Cheque_Amount_Number__c</fullName>
    <description>Solution to show Currency as Dollar sign ($) instead of CurrencyCode in an environment with Multi-currency enabled (visible to external users - ROOFPRO Contractors).</description>
    <formula>Check_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>