ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Clear_Date__c.field-meta.xml
<CustomField>
    <fullName>Clear_Date__c</fullName>
    <label>Cheque/Check Clear Date</label>
    <type>Date</type>
</CustomField>