ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/DELTA_FILE_IDS__c.field-meta.xml
<CustomField>
    <fullName>DELTA_FILE_IDS__c</fullName>
    <label>DELTA FILE IDS</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>