ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Distributor_IMT__c.field-meta.xml
<CustomField>
    <fullName>Distributor_IMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Distributor_IMT__c</referenceTo>
    <relationshipLabel>Uploaded Invoices</relationshipLabel>
    <relationshipName>Uploaded_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>