ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Distributor_Location__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Location__c</fullName>
    <label>Distributor Location</label>
    <type>TextArea</type>
</CustomField>