ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Distributor_Location_formula__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Location_formula__c</fullName>
    <formula>Distributor__c &amp; &quot; / &quot; &amp;  Distributor_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor / Location</label>
    <type>Text</type>
</CustomField>