ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Distributor_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name_formula__c</fullName>
    <description>To be shown in List View or Related List or Flow Screen only!</description>
    <formula>Distributor_IMT__r.Name</formula>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>