ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/DistributorID_Formula__c.field-meta.xml
<CustomField>
    <fullName>DistributorID_Formula__c</fullName>
    <formula>Distributor_IMT__r.Distributor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DistributorID</label>
    <type>Text</type>
</CustomField>