ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/EntityContactNumber_IMT_Formula__c.field-meta.xml
<CustomField>
    <fullName>EntityContactNumber_IMT_Formula__c</fullName>
    <formula>Contractor__r.EntityContactNumber_IMT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Contact Number Contractor</label>
    <type>Text</type>
</CustomField>