ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/EntityNumber_IMT_Formula__c.field-meta.xml
<CustomField>
    <fullName>EntityNumber_IMT_Formula__c</fullName>
    <formula>Contractor__r.EntityNumber_IMT__c</formula>
    <label>Entity Number Contractor</label>
    <type>Text</type>
</CustomField>