ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/File_Mistmatch__c.field-meta.xml
<CustomField>
    <fullName>File_Mistmatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Mismatch</label>
    <type>Checkbox</type>
</CustomField>