ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/File_s_Attached__c.field-meta.xml
<CustomField>
    <fullName>File_s_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by flow when at least one FileID is captured.</description>
    <label>File(s) Attached</label>
    <type>Checkbox</type>
</CustomField>