ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IKOPRO Homeowner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Uploaded Invoices for this Homeowner</relationshipLabel>
    <relationshipName>Uploaded_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>