ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Invoice_RebateID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_RebateID__c</fullName>
    <formula>Invoice_Number__c &amp; &quot; - &quot; &amp;  RebateID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Name/Description/Redemption Code</label>
    <type>Text</type>
</CustomField>