ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Marked_As_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Marked_As_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked As Invalid</label>
    <type>Checkbox</type>
</CustomField>