ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Nr_of_Files__c.field-meta.xml
<CustomField>
    <fullName>Nr_of_Files__c</fullName>
    <description>Takes the &apos;Uploaded Files&apos;-text field and counts the nr of files based on the nr of characters each FileID has (including the comma).</description>
    <formula>LEN( Uploaded_Files__c ) - LEN( SUBSTITUTE(Uploaded_Files__c , &apos;,&apos;, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nr. of attached files (provided no files were removed after upload).</inlineHelpText>
    <label>Nr. of Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>