ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Rebate_Program_CA__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Program_CA__c</fullName>
    <label>Rebate Program (CA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>REWARDSELEVATEDCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>