ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Rebate_Program_CRC_c__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Program_CRC_c__c</fullName>
    <label>Rebate_Program_CRC_c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rebate_Program_CRC_c</valueSetName>
    </valueSet>
</CustomField>