ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Rebate_Program_Details__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Program_Details__c</fullName>
    <description>Please share the rebate program under which you are submitting this invoice.</description>
    <inlineHelpText>Please share the rebate program under which you are submitting this invoice.</inlineHelpText>
    <label>Rebate Program Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>