ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Rebate_Program_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Program_Formula__c</fullName>
    <formula>IF( NOT(ISBLANK(TEXT(Rebate_Program_CA__c))), TEXT(Rebate_Program_CA__c),
IF(NOT(ISBLANK(TEXT(Rebate_Program_US__c))), TEXT(Rebate_Program_US__c),
IF(NOT(ISBLANK(TEXT(Rebate_Program_CRC_c__c))), TEXT( Rebate_Program_CRC_c__c), NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Program</label>
    <type>Text</type>
</CustomField>