ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Rebate_Program_US__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Program_US__c</fullName>
    <label>Rebate Program (US)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021BONUSREWARDS</fullName>
            </value>
            <value>
                <fullName>2018CONTRACTOR</fullName>
                <isActive>false</isActive>
                <label>2018CONTRACTOR</label>
            </value>
            <value>
                <fullName>2018PRO4-US</fullName>
                <isActive>false</isActive>
                <label>2018PRO4-US</label>
            </value>
            <value>
                <fullName>2019CONTRACTOR</fullName>
                <isActive>false</isActive>
                <label>2019CONTRACTOR</label>
            </value>
            <value>
                <fullName>2019PRO4-US</fullName>
                <isActive>false</isActive>
                <label>2019PRO4-US</label>
            </value>
            <value>
                <fullName>2019SPIFF</fullName>
                <isActive>false</isActive>
                <label>2019SPIFF</label>
            </value>
            <value>
                <fullName>2020BONUSREWARDSUS</fullName>
                <isActive>false</isActive>
                <label>2020BONUSREWARDSUS</label>
            </value>
            <value>
                <fullName>250WRAPREBATE2019</fullName>
                <isActive>false</isActive>
                <label>250WRAPREBATE2019</label>
            </value>
            <value>
                <fullName>500WRAPREBATE2019</fullName>
                <isActive>false</isActive>
                <label>500WRAPREBATE2019</label>
            </value>
            <value>
                <fullName>NOT A VALID CODE</fullName>
                <isActive>false</isActive>
                <label>NOT A VALID CODE</label>
            </value>
            <value>
                <fullName>SALUTEMILITARY2019</fullName>
                <isActive>false</isActive>
                <label>SALUTEMILITARY2019</label>
            </value>
            <value>
                <fullName>SALUTEMILITARY2019-D</fullName>
                <isActive>false</isActive>
                <label>SALUTEMILITARY2019-D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>