ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/RebateID__c.field-meta.xml
<CustomField>
    <fullName>RebateID__c</fullName>
    <label>Redemption Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>