ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/RedemptionID__c.field-meta.xml
<CustomField>
    <fullName>RedemptionID__c</fullName>
    <externalId>true</externalId>
    <label>RedemptionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>