ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <formula>CASE(TEXT( Status__c ), &quot;DO NOT PAY&quot;, IF( TEXT(Owner:User.ROOFPRO_Portal_Language__c)= &quot;Quebec French&quot; , &quot;a été refusée. Vous recevrez prochainement les informations d’Integrated Marketing Technologies&quot;, &quot;was declined. You will receive information from Integrated Marketing Technologies shortly.&quot;), 
TEXT( Status__c ))</formula>
    <label>Status Description</label>
    <type>Text</type>
</CustomField>