ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Status_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Status_Reporting__c</fullName>
    <description>Status text field for use on reports only. This is hidden from page layout for all users.</description>
    <formula>TEXT(Status__c)</formula>
    <label>Status (For Reporting)</label>
    <type>Text</type>
</CustomField>