ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Tier_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tier_Percentage__c</fullName>
    <description>Taken from the Tier of the Account at the moment of Invoice Upload record creation.</description>
    <label>Tier Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>