ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Upload_Date_Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Status_formula__c</fullName>
    <description>To be shown in List View or Related List only!</description>
    <formula>LEFT(TEXT(Upload_Date_Time__c), 10) &amp; &quot; / &quot; &amp;  TEXT(Status__c)</formula>
    <label>Upload Date / Status</label>
    <type>Text</type>
</CustomField>