ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Upload_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Upload Date</label>
    <type>DateTime</type>
</CustomField>