ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Uploaded_Files__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Files__c</fullName>
    <label>Uploaded Files</label>
    <length>255</length>
    <type>Text</type>
</CustomField>