ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/Uploaded_Files_Long__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Files_Long__c</fullName>
    <label>Uploaded Files</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>