ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/User_FirstName__c.field-meta.xml
<CustomField>
    <fullName>User_FirstName__c</fullName>
    <label>User_FirstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>