ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/User_LastName__c.field-meta.xml
<CustomField>
    <fullName>User_LastName__c</fullName>
    <label>User_LastName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>