ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/fields/User_Mobile__c.field-meta.xml
<CustomField>
    <fullName>User_Mobile__c</fullName>
    <label>User_Mobile</label>
    <type>Phone</type>
</CustomField>