ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/recordTypes/Draft_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Draft_Invoice</fullName>
    <active>true</active>
    <label>Draft Invoice</label>
</RecordType>