ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/recordTypes/Invoice_Ready_for_Upload.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Ready_for_Upload</fullName>
    <active>true</active>
    <label>Invoice Ready for Upload</label>
</RecordType>