ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/recordTypes/Uploaded_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Uploaded_Invoice</fullName>
    <active>true</active>
    <label>Uploaded Invoice</label>
</RecordType>