ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_RebateID__c</columns>
    <columns>Upload_Date_Status_formula__c</columns>
    <columns>Distributor__c</columns>
    <columns>Rebate_Program_Formula__c</columns>
    <columns>RebateID__c</columns>
    <columns>Contractor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>