ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/listViews/All_External.listView-meta.xml
<ListView>
    <fullName>All_External</fullName>
    <columns>NAME</columns>
    <columns>Invoice_RebateID__c</columns>
    <columns>Upload_Date_Status_formula__c</columns>
    <columns>Distributor__c</columns>
    <columns>RebateID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Partner_Community_Users</group>
    </sharedTo>
</ListView>