ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/listViews/All_External_FR.listView-meta.xml
<ListView>
    <fullName>All_External_FR</fullName>
    <columns>NAME</columns>
    <columns>Invoice_RebateID__c</columns>
    <columns>Upload_Date_Status_formula__c</columns>
    <columns>Distributor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les factures</label>
    <language>en_US</language>
    <sharedTo>
        <group>Partner_Community_Users</group>
    </sharedTo>
</ListView>