ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/listViews/ThisWeeksUploads.listView-meta.xml
<ListView>
    <fullName>ThisWeeksUploads</fullName>
    <columns>NAME</columns>
    <columns>Invoice_RebateID__c</columns>
    <columns>Upload_Date_Status_formula__c</columns>
    <columns>Distributor__c</columns>
    <columns>Home_Owner__c</columns>
    <columns>Rebate_Program_Formula__c</columns>
    <columns>RebateID__c</columns>
    <columns>Contractor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Upload_Date_Time__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week&apos;s Uploads</label>
    <language>en_US</language>
    <sharedTo>
        <group>Loyalty_Team</group>
    </sharedTo>
</ListView>