ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Contractor_Invoice__c/listViews/Uploaded_Invoices_without_FileIDs.listView-meta.xml
<ListView>
    <fullName>Uploaded_Invoices_without_FileIDs</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Invoice_RebateID__c</columns>
    <columns>Upload_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Contractor__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Uploaded</value>
    </filters>
    <filters>
        <field>File_s_Attached__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Uploaded Invoices without FileIDs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Loyalty_Team</group>
    </sharedTo>
</ListView>